tests/diagnostics/variables/assignments/type_mismatch/expect.txt
# exit: 1
input/main.lang0:3:9: error: assignment type mismatch: expected int64, got boolean
      x = true
          ^
